--- a/client/src/components/Categories/Categories.scss
+++ b/client/src/components/Categories/Categories.scss
@@ -35,7 +35,7 @@
       margin: auto;
       cursor: pointer;
       border: none;
-      background-color: white;
+      background-color: rgb(89, 88, 88);
       text-transform: uppercase;
       font-weight: 500;
     }
